[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openvb_expressivelabs"
version = "0.0.1"
authors = [
  { name="layetri", email="daniel@expressivelabs.net" },
]
description = "Tools for generating and parsing the OpenVBconf standard"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/expressivelabs/openvb-python"
Issues = "https://github.com/expressivelabs/openvb-python/issues"